--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "core-js": "^3.4.4",
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.1.2",
     "@vue/cli-service": "^4.1.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
